--- a/staticman.yml
+++ b/staticman.yml
@@ -4,7 +4,7 @@
 # another one to handle posts.
 # To encrypt strings use the following endpoint:
 # https://api.staticman.net/v2/encrypt/{TEXT TO BE ENCRYPTED}
-#
+# one two three
 
 comments:
   # (*) REQUIRED
