--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,17 @@ compress_html:
   ignore:
     envs: development
 
+# Collections
+collections:
+  gear:
+    output: true
+    permalink: /:collection/:path/
+  resources:
+    output: true
+    permalink: /:collection/:path/
+  general:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -282,10 +293,37 @@ defaults:
       comments: # true
       share: true
       related: true
- # _pages
+  # _pages
   - scope:
       path: "_pages"
       type: pages
     values:
       layout: single
       author_profile: true
+  # _gear
+  - scope:
+      path: ""
+      type: gear
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: false
+  # _resources
+  - scope:
+      path: ""
+      type: resources
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: false
+  # _general
+  - scope:
+      path: ""
+      type: general
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: false
