--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ title                    : "Titans Legion"
 title_separator          : "-"
 name                     : "TITANSLEGION"
 description              : "A collection of tips and tricks for success in Iron Thrones"
-url                      : https://tsladmin.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://titanslegion.com  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : tsladmin/tsladmin.github.io
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
