--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
   bio              : "Conquering Iron Throne"
   location         : "Stuck in K10"
   email            :
-  uri              : "https://tsladmin.github.io"
+  uri              : "https://titanslegion.com"
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
   codepen          :
